--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation 'org.reflections:reflections:0.10.2'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
 }
 
 test {
